--- a/implementations/MaxMSP/jcom.vimic~/jcom.vimic~.vcproj
+++ b/implementations/MaxMSP/jcom.vimic~/jcom.vimic~.vcproj
@@ -4,7 +4,7 @@
 	Version="9.00"
 	Name="Max External"
 	ProjectGUID="{E3F6789F-D53D-458B-88CC-D5718E89B940}"
-	RootNamespace="tt.vimic~"
+	RootNamespace="tt.balance~"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="0"
 	>
@@ -43,7 +43,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)\..\..\..\supports\objectivemax\SDKs\Max5\c74support\max-includes&quot;;&quot;$(ProjectDir)\..\..\..\supports\objectivemax\SDKs\Max5\c74support\msp-includes&quot;;&quot;$(ProjectDir)\..\..\..\supports\max&quot;;&quot;$(ProjectDir)..\..\..\..\Foundation\library\includes&quot;;&quot;$(ProjectDir)..\..\..\..\Graphics\library\includes&quot;;&quot;$(ProjectDir)..\..\..\library\includes&quot;;&quot;$(ProjectDir)..\..\..\library\includes\units&quot;"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;WIN_VERSION"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;WIN_VERSION;M_PI=3.1415926535897932384626433832795028841971693993751058209749"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -122,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="3"
 				AdditionalIncludeDirectories="&quot;$(ProjectDir)\..\..\..\supports\objectivemax\SDKs\Max5\c74support\max-includes&quot;;&quot;$(ProjectDir)\..\..\..\supports\objectivemax\SDKs\Max5\c74support\msp-includes&quot;;&quot;$(ProjectDir)\..\..\..\supports\max&quot;;&quot;$(ProjectDir)..\..\..\..\Foundation\library\includes&quot;;&quot;$(ProjectDir)..\..\..\..\Graphics\library\includes&quot;;&quot;$(ProjectDir)..\..\..\library\includes&quot;;&quot;$(ProjectDir)..\..\..\library\includes\units&quot;"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;WIN_VERSION;_CRT_NOFORCE_MANIFEST;_STL_NOFORCE_MANIFEST"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;WIN_VERSION;_CRT_NOFORCE_MANIFEST;_STL_NOFORCE_MANIFEST;M_PI=3.1415926535897932384626433832795028841971693993751058209749"
 				RuntimeLibrary="0"
 				StructMemberAlignment="2"
 				UsePrecompiledHeader="0"
@@ -179,7 +179,55 @@
 	</References>
 	<Files>
 		<File
+			RelativePath=".\Angle.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Angle.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\supports\objectivemax\SDKs\Max5\c74support\max-includes\common\commonsyms.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Coordinate.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Coordinate.h"
+			>
+		</File>
+		<File
+			RelativePath=".\CrossFade.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\CrossFade.h"
+			>
+		</File>
+		<File
+			RelativePath=".\CrossFadeQueue.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\CrossFadeQueue.h"
+			>
+		</File>
+		<File
+			RelativePath=".\Filter.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Filter.h"
+			>
+		</File>
+		<File
+			RelativePath=".\HiMidLow.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\HiMidLow.h"
 			>
 		</File>
 		<File
@@ -187,7 +235,79 @@
 			>
 		</File>
 		<File
+			RelativePath=".\jcom.vimic~.h"
+			>
+		</File>
+		<File
+			RelativePath=".\LowPass.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\LowPass.h"
+			>
+		</File>
+		<File
+			RelativePath=".\Mic.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Mic.h"
+			>
+		</File>
+		<File
+			RelativePath=".\MicArray.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\MicArray.h"
+			>
+		</File>
+		<File
+			RelativePath=".\Mirror.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Mirror.h"
+			>
+		</File>
+		<File
+			RelativePath=".\Moveable.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Moveable.h"
+			>
+		</File>
+		<File
+			RelativePath=".\Properties.h"
+			>
+		</File>
+		<File
+			RelativePath=".\Room.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Room.h"
+			>
+		</File>
+		<File
+			RelativePath=".\Source.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\Source.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\supports\max\TTClassWrapperMax.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\ViMic_Engine.cpp"
+			>
+		</File>
+		<File
+			RelativePath=".\ViMic_Engine.h"
 			>
 		</File>
 	</Files>
