--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ Release
 # Files generated from templates by the build script
 JamomaModular.xcconfig
 TTModularVersion.h
+
+# Git conflict files
+*.orig
